app/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  selector:
    app: app
  ports:
    - port: 8000
      targetPort: 8000
