app/kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: __HOSTNAME__
    http:
      paths:
      - path: "/users"
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              number: 8000
